package = 'clawpack.geoclaw'
pkg_dir = join_paths(package.split('.'))

python_sources = [
  '__init__.py',
  'data.py',
  'dtopotools.py',
  'etopotools.py',
  'fgmax_tools.py',
  'fgout_tools.py',
  'geoplot.py',
  'kmltools.py',
  'marching_front.py',
  'most2geoclaw.py',
  'okada.py',
  'plotfg.py',
  'resolution.py',
  'test.py',
  'topotools.py',
  'units.py',
  'util.py',
]

py.install_sources(
  python_sources,
  subdir: pkg_dir,
)

